@@ -1,3 +1,8 @@
+2013-12-26  Allen D. Ball  <ball@10-0-1-2.lan>
+
+	* src/main/java/iprotium/upnp/RedirectServlet.java:
+	Initial writing.
+
 2013-11-27  Allen D. Ball  <ball@10-0-1-2.lan>
 
 	* Annotated packages with @ManifestSection and use
